--- a/wercker.yml
+++ b/wercker.yml
@@ -15,9 +15,9 @@ build:
                 mkdir -p sync/ && \
                 cp -r docs/build/html/ sync/gallery/ && \
                 ls -R sync/
-                #        - script:
-                #            name: push documentation
-                #            code: |
-                #                aws configure set aws_access_key_id $AWS_KEY_ID && \
-                #                aws configure set aws_secret_access_key $AWS_SECRET_KEY && \
-                #                aws s3 sync sync/ s3://docs.forward-loop.com
+        - script:
+            name: push documentation
+            code: |
+                aws configure set aws_access_key_id $AWS_KEY_ID && \
+                aws configure set aws_secret_access_key $AWS_SECRET_KEY && \
+                aws s3 sync sync/ s3://docs.forward-loop.com
